tests/snapshots/scenarios__014_search_core_phrase_specific.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "014_search_core_phrase_specific",
  "category": "search_core",
  "status": "validated",
  "files": []
}
