tests/snapshots/scenarios__015_search_core_sort_path.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "015_search_core_sort_path",
  "category": "search_core",
  "status": "validated",
  "files": []
}
