tests/snapshots/scenarios__021_build_scope_include_dirs.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "021_build_scope_include_dirs",
  "category": "build_scope",
  "status": "validated",
  "files": []
}
