tests/snapshots/scenarios__023_cache_detects_file_change.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 023_cache_detects_file_change [cache_build]: Cache Build: detects file change"
expression: result
info:
  id: 023_cache_detects_file_change
  name: "Cache Build: detects file change"
  category: cache_build
  description: cache_build scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/023_cache_detects_file_change/scenario.toml
---
{
  "category": "cache_build",
  "files": [],
  "scenario_id": "023_cache_detects_file_change",
  "status": "validated"
}
